[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "protex"
authors = [
    {name = "Marcus Wieder", email = "marcus.wieder@gmail.com"},
    {name = "Florian Jörg"},
]
description = "Proton exchange using SAMS and openMM for ionic liquids"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["molecular dynamics", "proton exchange"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
#dependencies = [
#    "requests",
#    'importlib-metadata; python_version<"3.8"',
#]
dynamic = ["version"]


[tool.setuptools_scm]
write_to = "protex/_version.py"


[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
